--- a/config-repo/auth.yml
+++ b/config-repo/auth.yml
@@ -1,17 +1,28 @@
 server:
-  port: 8051
-  
-spring:
-  datasource:
-    url: jdbc:h2:mem:user
+  port: 8050
 
 eureka:
   instance:
     hostname: auth
     prefer-ip-address: true
+    metadata-map:
+      user: user
+      password: ${AUTH_SERVER_PASSWORD:password}
   client:
     service-url:
       defaultZone: http://user:123456@discovery:8761/eureka/
+
+spring:
+  datasource:
+    url: jdbc:h2:mem:user
+  rabbitmq:
+    host: rabbitmq
+    username: admin
+    password: 123456
+  security:
+    user:
+      name: user
+      password: ${AUTH_SERVER_PASSWORD:password}
 
 management:
   endpoints:
@@ -21,9 +32,8 @@ management:
   endpoint:
     health:
       show-details: always      
-     
+ 
 logging:
   level:
-    org.springframework: debug
+    org.springframework: info
     com.brycehan: debug
-        
