--- a/config-repo/service-b.yml
+++ b/config-repo/service-b.yml
@@ -14,6 +14,10 @@ spring:
     loadbalancer:
       ribbon:
         enabled: false
+  rabbitmq:
+    host: rabbitmq
+    username: admin
+    password: 123456
 
 security:
   oauth2:
