--- a/config-repo/service-a.yml
+++ b/config-repo/service-a.yml
@@ -14,6 +14,10 @@ spring:
     host: rabbitmq
     username: admin
     password: 123456
+  cloud:
+    bus:
+      trace:
+        enabled: true
 
 security:
   oauth2:
