添加刷新配置

--- a/config-repo/service-a.yml
+++ b/config-repo/service-a.yml
@@ -9,6 +9,8 @@ eureka:
     service-url:
       defaultZone: http://user:${DISCOVERY_SERVER_PASSWORD:password}@discovery:8761/eureka/
 
+name: brycehan
+
 spring:
   rabbitmq:
     host: rabbitmq
