关闭默认Hystrix断路器

--- a/config-repo/service-b.yml
+++ b/config-repo/service-b.yml
@@ -14,6 +14,9 @@ spring:
     loadbalancer:
       ribbon:
         enabled: false
+    circuitbreaker:
+      hystrix:
+        enabled: false    
   rabbitmq:
     host: rabbitmq
     username: admin
