--- a/config-repo/auth.yml
+++ b/config-repo/auth.yml
@@ -10,7 +10,7 @@ eureka:
       password: ${AUTH_SERVER_PASSWORD:password}
   client:
     service-url:
-      defaultZone: http://user:123456@discovery:8761/eureka/
+      defaultZone: http://user:${DISCOVERY_SERVER_PASSWORD:password}@discovery:8761/eureka/
 
 spring:
   datasource:
