--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,14 @@ version: '3'
 services:
   rabbitmq:
     image: rabbitmq:3-management
-    retart: always
+    restart: always
+    hostname: rabbitmq
     ports: 
+      - 5672:5672
       - 15672:15672
+    environment:
+      - RABBITMQ_DEFAULT_USER=admin
+      - RABBITMQ_DEFAULT_PASS=123456  
   discovery:
     image: cloud/discovery
     ports:
