--- a/config-repo/service-b.yml
+++ b/config-repo/service-b.yml
@@ -5,9 +5,6 @@ eureka:
   instance:
     hostname: service-b
     prefer-ip-address: true
-  client:
-    service-url:
-      defaultZone: http://user:${DISCOVERY_SERVER_PASSWORD:password}@discovery:8761/eureka/
 
 spring:
   cloud:
@@ -16,20 +13,16 @@ spring:
         enabled: false
     circuitbreaker:
       hystrix:
-        enabled: false    
-  rabbitmq:
-    host: rabbitmq
-    username: admin
-    password: 123456
+        enabled: false
 
 security:
   oauth2:
     client:
-      client-id: client
-      client-secret: secret
-      access-token-uri: http://auth:8050/oauth/token
+      client-id: service-b
+      client-secret: password
+      access-token-uri: http://${authserver.hostname}:${authserver.port}/oauth/token
     resource:
-      user-info-uri: http://auth:8050/current
+      user-info-uri: http://${authserver.hostname}:${authserver.port}/current
 
 management:
   endpoints:
