--- a/config-repo/service-a.yml
+++ b/config-repo/service-a.yml
@@ -9,10 +9,9 @@ eureka:
 name: brycehan
 
 spring:
-  cloud:
-    bus:
-      trace:
-        enabled: true
+  zipkin:
+    sender:
+      type: rabbit
 
 security:
   oauth2:
