--- a/config-repo/gateway.yml
+++ b/config-repo/gateway.yml
@@ -7,7 +7,16 @@ eureka:
 
 spring:
   cloud:
+    loadbalancer:
+      ribbon:
+        enabled: false
+  zipkin:
+    sender:
+      type: rabbit     
     gateway:
+      httpclient:
+        connect-timeout: 10000
+        response-timeout: 10s
       routes:
       - id: auth
         uri: lb://auth
