--- a/config-repo/gateway.yml
+++ b/config-repo/gateway.yml
@@ -6,10 +6,10 @@ eureka:
     prefer-ip-address: true
 
 spring:
-  cloud:
-    loadbalancer:
-      ribbon:
-        enabled: false
+#  cloud:
+#    loadbalancer:
+#      ribbon:
+#        enabled: false
   zipkin:
     sender:
       type: rabbit     
