修复了一些已知问题

--- a/bryce-cloud-wechat/pom.xml
+++ b/bryce-cloud-wechat/pom.xml
@@ -30,6 +30,10 @@
             <groupId>com.brycehan.cloud</groupId>
             <artifactId>bryce-cloud-framework</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.brycehan.cloud</groupId>
+            <artifactId>bryce-cloud-api</artifactId>
+        </dependency>
         <!-- aop 框架 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
