--- a/bryce-cloud-gateway/pom.xml
+++ b/bryce-cloud-gateway/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.brycehan.cloud</groupId>
 		<artifactId>bryce-cloud</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>${revision}</version>
 	</parent>
 	<artifactId>bryce-cloud-gateway</artifactId>
 	<name>bryce-cloud-gateway</name>
