--- a/bryce-cloud-common/pom.xml
+++ b/bryce-cloud-common/pom.xml
@@ -36,11 +36,6 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
-        <!-- Data Redis -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>
         <!-- Security 安全框架 -->
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -117,6 +112,10 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okio</groupId>
+            <artifactId>okio</artifactId>
         </dependency>
         <!-- Lombok -->
         <dependency>
