--- a/bryce-cloud-wechat/pom.xml
+++ b/bryce-cloud-wechat/pom.xml
@@ -63,4 +63,35 @@
         </dependency>
     </dependencies>
 
+    <!-- 构建 -->
+    <build>
+        <finalName>${project.artifactId}</finalName>
+        <!-- 资源 -->
+        <resources>
+            <!-- 编译时包含 resources 文件夹下资源 -->
+            <resource>
+                <directory>src/main/resources</directory>
+                <!-- 开启过滤，用指定的参数替换 directory 下的文件中的参数 -->
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+            </resource>
+        </resources>
+        <!-- 插件 -->
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
