--- a/bryce-cloud-framework/pom.xml
+++ b/bryce-cloud-framework/pom.xml
@@ -99,6 +99,10 @@
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.loki4j</groupId>
+            <artifactId>loki-logback-appender</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
