将quartz改为XXL-JOB分布式定时任务

--- a/bryce-cloud-framework/pom.xml
+++ b/bryce-cloud-framework/pom.xml
@@ -114,6 +114,12 @@
             <groupId>io.zipkin.reporter2</groupId>
             <artifactId>zipkin-reporter-brave</artifactId>
         </dependency>
+        <!-- XXL-JOB -->
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>${xxl-job.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
