--- a/bryce-cloud-system/src/main/resources/application.yml
+++ b/bryce-cloud-system/src/main/resources/application.yml
@@ -19,6 +19,7 @@ spring:
       - optional:nacos:application-task.yaml
       - optional:nacos:application-sms.yaml
       - optional:nacos:application-cache.yaml
+      - optional:nacos:application-xxl-job.yaml
       - optional:nacos:bryce-cloud-system.yaml
 
 logging:
