--- a/bryce-cloud-wechat/src/main/resources/application.yml
+++ b/bryce-cloud-wechat/src/main/resources/application.yml
@@ -19,4 +19,5 @@ spring:
       - optional:nacos:application-task.yaml
       - optional:nacos:application-sms.yaml
       - optional:nacos:application-cache.yaml
+      - optional:nacos:application-xxl-job.yaml
       - optional:nacos:bryce-cloud-wechat.yaml
