--- a/pom.xml
+++ b/pom.xml
@@ -132,12 +132,6 @@
 				<artifactId>bryce-cloud-module</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-			<!-- 代码生成器模块 -->
-			<dependency>
-				<groupId>com.brycehan.cloud</groupId>
-				<artifactId>bryce-module-generator</artifactId>
-				<version>${project.version}</version>
-			</dependency>
 			<!-- 监控模块 -->
 			<dependency>
 				<groupId>com.brycehan.cloud</groupId>
@@ -149,12 +143,6 @@
 				<groupId>com.brycehan.cloud</groupId>
 				<artifactId>bryce-module-sms</artifactId>
 				<version>${revision}</version>
-			</dependency>
-			<!-- wechat 模块 -->
-			<dependency>
-				<groupId>com.brycehan.boot</groupId>
-				<artifactId>bryce-module-wechat</artifactId>
-				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.brycehan.boot</groupId>
@@ -380,11 +368,9 @@
 			<properties>
 				<!-- 开发环境 -->
 				<profile.name>dev</profile.name>
-				<nacos.server-addr>192.168.0.20:8848</nacos.server-addr>
+				<nacos.server-addr>localhost:8848</nacos.server-addr>
 				<nacos.namespace>dev</nacos.namespace>
 				<nacos.groupname>bryce-cloud</nacos.groupname>
-				<nacos.username></nacos.username>
-				<nacos.password></nacos.password>
 			</properties>
 		</profile>
 		<profile>
@@ -395,8 +381,6 @@
 				<nacos.server-addr>127.0.0.1:8848</nacos.server-addr>
 				<nacos.namespace>test</nacos.namespace>
 				<nacos.groupname>bryce-cloud</nacos.groupname>
-				<nacos.username></nacos.username>
-				<nacos.password></nacos.password>
 			</properties>
 		</profile>
 		<profile>
@@ -407,8 +391,6 @@
 				<nacos.server-addr>nacos:8848</nacos.server-addr>
 				<nacos.namespace>prod</nacos.namespace>
 				<nacos.groupname>bryce-cloud</nacos.groupname>
-				<nacos.username></nacos.username>
-				<nacos.password></nacos.password>
 			</properties>
 		</profile>
 	</profiles>
